cambio de ingenieria

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -60,7 +60,7 @@
         "description": "He completado exitosamente todos los niveles (A1-A2-B1-B2-C1) hasta alcanzar el dominio del idioma alemán. Durante el curso aprendí una amplia gama de temas relacionados con Alemania y adquirí habilidades para hablar, escuchar y escribir correctamente en el idioma."
       },
       {
-        "title": "Licenciatura en Tecnologías de la Información",
+        "title": "Ingeniería en Tecnologías de la Información",
         "place": "Universidad Yachay Tech, Imbabura, Ecuador",
         "date": "2015 - 2021",
         "description": [
