--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -151,8 +151,8 @@
                 "title": "Deutsch App (Flutter)",
                 "content": "This app is developed in Flutter and is designed to help users learn German as a foreign language. In the 'Prepositions' section, a list of verbs with their most common prepositions is displayed. It also allows you to add new verbs, new prepositions, and reset the content to its initial state. When you open the practice screen, the verbs to study are shown. The app follows a flashcard model: it only shows the verb and asks you to think of the prepositions that go with it. By pressing 'Reveal prepositions,' the correct prepositions associated with the verb are displayed. When you tap on the card with the preposition, the meaning of the verb with that preposition is shown. From the verbs menu, you can search, modify, add, and delete any verb-preposition combination."
             },
-            "arcgame": {
-                "title": "Arc (Unity VR)",
+            "florgame": {
+                "title": "FlorGame VR (Unity VR)",
                 "content": "This video showcases a demo of a VR game currently in development using Unity 6. The game challenges players to launch a projectile by applying an initial force and angle. A second hit can be applied mid-flight, guided by hand position, to correct its trajectory. Players can teleport to the ball’s location and are required to launch it again from the same X and Z coordinates—though the launch height remains flexible. The main objective is to activate all the flowers distributed throughout the map. Falling into water resets the player to the starting point, adding a light layer of challenge. Planned features include a timer and shot counter to enable leaderboard rankings, as well as multiple themed levels. Designed as a calm yet engaging experience, this game allows players to relax and enjoy the environment while honing their aiming skills."
             }
         }
